--- a/css/index.css
+++ b/css/index.css
@@ -252,11 +252,36 @@ html{
     margin: 0;
   }
   
-  .footer {
-    text-align: center;
-    font-size: 20px;
-    color: #777;
-  }
+
+ 
+.footer {
+  background-color: #f8f8f8;
+  padding: 20px;
+  text-align: center;
+  border-top: 1px solid #ddd;
+  font-size: 14px;
+  color: #333;
+}
+
+
+.footer p {
+  margin: 0;
+  font-size: 1rem; 
+  color: #666; 
+}
+
+
+.footer a {
+  color: #007bff; 
+  text-decoration: none; 
+  margin: 0 5px; 
+}
+
+
+.footer a:hover {
+  text-decoration: underline; 
+}
+
   
   .contact-info h1 {
     font-size: 1.5rem;
