--- a/css/HomePagePrivacyPolicy.css
+++ b/css/HomePagePrivacyPolicy.css
@@ -40,7 +40,8 @@ html{
 .faq {
     width: auto;
     max-width: 80%;
-    margin: 0 auto;
+    margin:  auto;
+    margin-top: 100px;
     background: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -93,6 +94,7 @@ html{
 
 
 footer {
+  margin-top: 100px;
   background-color: #f9f9f9;
   color: #333;
   font-family: Arial, sans-serif;
