--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 :root {
   --primary-color: #333;
   --secondary-color: #666;
@@ -8,185 +7,163 @@
   --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-html{
-
+html {
   scroll-behavior: smooth;
 }
-  
-  body {
-    margin: 0;
-    font-family: var(--font-family);
-    line-height: 1.6;
-    background-color: #fff;
-    color: var(--primary-color);
-    
 
-  }
-  
-  header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 1rem 2rem;
-    background: #fff;
-    margin: 0 1rem;
-
-  }
-  
-  header nav a {
-    margin: 0 1rem;
-    text-decoration: none;
-    color: var(--primary-color);
-    font-weight: bold;
-    transition: color 0.3s ease;
-
-  }
-
-  header nav a:hover {
-    color: var(--hover-color);
+body {
+  margin: 0;
+  font-family: var(--font-family);
+  line-height: 1.6;
+  background-color: #fff;
+  color: var(--primary-color);
 }
 
-  
-  .firstcontent {
-   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
-    height: 80vh;
-    gap: 20rem;
-    margin-bottom: 20px
-   
-  }
-  
-  .firstcontent img {
-
-    width: 30%;
-    height: auto;
-    animation: moveAndFade 1s ease-in-out;
-
-  }
-  
-  .firstcontent h1 {
-    font-size: 3rem;
-    margin: 0;
-    color: #333;
-    text-align: center;
-    margin-right: 13rem;
-  }
-  
-  .features {
-    background-color: #f9f9f9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-    gap: 150px;
-    
-  }
-  
-  
-  
-  .features img {
-    max-width: 40%;
-    border-radius: 10px;
-    box-shadow: var(--box-shadow);
-    transition: transform 0.3s ease;
-
-  }
-
-  .features img:hover {
-    transform: scale(1.05);
+header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1rem 2rem;
+  background: #fff;
+  margin: 0 1rem;
 }
 
-    
-  
-  .features h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .features p {
-    font-size: 2rem;
-    color: #333;
-    line-height: 1.5;
-  }
-  
-  .features div {
-    max-width: 45%;
-    text-align: left;
-  }
-  
-  .download-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-    gap: 150px;
-    background-color: #fff;
-  }
-  
-  .download-section img {
-    width: 250px;
-    transition: transform 0.3s ease;
-  }
-
-  .download-section img:hover {
-    transform: scale(1.1);
+header nav a {
+  margin: 0 1rem;
+  text-decoration: none;
+  color: var(--primary-color);
+  font-weight: bold;
+  transition: color 0.3s ease;
 }
 
-  
-  .text-content h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-  
-  .text-content p {
-    font-size: 1.2rem;
-  }
-  
-  .google-play-button img {
-    width: 150px;
-    cursor: pointer;
-  }
-  
-  .how-it-works {
-    background-color: var(--bg-light);
-    padding: 40px 20px;
-    text-align: center;
-
-  }
-  
-  .how-it-works h2 {
-    font-size: clamp(2rem, 4vw, 3rem);
-    font-weight: bold;
-    margin-bottom: 20px;
-
-    
-  }
-  
-  .how-it-works .step {
-    display: inline-block;
-    width: 300px;
-    margin: 20px;
-    text-align: center;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: var(--box-shadow);
-    overflow: hidden;
-    position: relative;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-  }
-  .how-it-works .step:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+header nav a:hover {
+  color: var(--hover-color);
 }
 
-  
-  
-  
+.firstcontent {
+  background-color: #57418F, #FFAF18;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  height: 80vh;
+  gap: 20rem;
+  margin-bottom: 20px;
+}
+
+.firstcontent img {
+  width: 30%;
+  height: auto;
+  animation: moveAndFade 1s ease-in-out;
+}
+
+.firstcontent h1 {
+  font-size: clamp(2rem, 5vw, 3rem);
+  margin: 0;
+  color: var(--primary-color);
+  text-align: center;
+  margin-right: 13rem;
+}
+
+.features {
+  background-color: var(--bg-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  gap: 150px;
+}
+
+.features img {
+  max-width: 40%;
+  border-radius: 10px;
+  box-shadow: var(--box-shadow);
+  transition: transform 0.3s ease;
+}
+
+.features img:hover {
+  transform: scale(1.05);
+}
+
+.features h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.features p {
+  font-size: 2rem;
+  color: var(--primary-color);
+  line-height: 1.5;
+}
+
+.features div {
+  max-width: 45%;
+  text-align: left;
+}
+
+.download-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  gap: 150px;
+  background-color: #fff;
+}
+
+.download-section img {
+  width: 250px;
+  transition: transform 0.3s ease;
+}
+
+.download-section img:hover {
+  transform: scale(1.1);
+}
+
+.text-content h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.text-content p {
+  font-size: 1.2rem;
+}
+
+.google-play-button img {
+  width: 150px;
+  cursor: pointer;
+}
+
+.how-it-works {
+  background-color: var(--bg-light);
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.how-it-works h2 {
+  font-size: clamp(2rem, 4vw, 3rem);
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.how-it-works .step {
+  display: inline-block;
+  width: 300px;
+  margin: 20px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: var(--box-shadow);
+  overflow: hidden;
+  position: relative;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.how-it-works .step:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 .how-it-works .step img {
   width: 100%;
   height: auto;
@@ -206,89 +183,84 @@ html{
   margin-top: 10px;
   color: var(--secondary-color);
 }
-  
-  .about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 40px;
-    background-color: #fff;
-    gap: 20px;
 
-  }
-  
-  .about h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .about .content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    text-align: left;
-    max-width: 800px;
-  }
-  
-  .about img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    box-shadow: var(--box-shadow);
-    margin-right: 50px;
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 40px;
+  background-color: #fff;
+  gap: 20px;
+}
 
-  }
-  
-  .about p {
-    font-size: clamp(1rem, 2vw, 1.5rem);
-    color: var(--secondary-color);
-    line-height: 1.5;
+.about h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
 
-  }
-  
-  footer {
-    background-color: #f9f9f9;
-    color: #333;
-    font-family: Arial, sans-serif;
-    padding: 20px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-left: 6rem;
-    padding-right: 16rem;
-  }
-  
-  .footer-logo {
-    display: flex;
-    align-items: center;
-    gap: 10px; 
-  }
-  
-  .footer-logo img {
-    width: 50px; 
-    height: auto;
-  }
-  
-  .footer-logo h1 {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-  }
-  
+.about .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  text-align: left;
+  max-width: 800px;
+}
 
- 
+.about img {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  box-shadow: var(--box-shadow);
+  margin-right: 50px;
+}
+
+.about p {
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  color: var(--secondary-color);
+  line-height: 1.5;
+}
+
+footer {
+  background-color: #f9f9f9;
+  color: #333;
+  font-family: Arial, sans-serif;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-left: 6rem;
+  padding-right: 16rem;
+}
+
+.footer-logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.footer-logo img {
+  width: 50px;
+  height: auto;
+}
+
+.footer-logo h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
 .footer {
   background-color: #f8f8f8;
   padding: 20px;
@@ -298,96 +270,127 @@ html{
   color: #333;
 }
 
-
 .footer p {
   margin: 0;
-  font-size: 1rem; 
-  color: #666; 
+  font-size: 1rem;
+  color: #666;
 }
-
 
 .footer a {
-  color: #007bff; 
-  text-decoration: none; 
-  margin: 0 5px; 
+  color: #007bff;
+  text-decoration: none;
+  margin: 0 5px;
 }
-
 
 .footer a:hover {
-  text-decoration: underline; 
+  text-decoration: underline;
 }
 
-  
-  .contact-info h1 {
-    font-size: 1.5rem;
-    color: #333;
+.contact-info h1 {
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.contact-info p {
+  font-size: 1.5rem;
+  margin: 5px 0;
+  line-height: 1.5;
+}
+
+.download-app p {
+  font-size: 1.5rem;
+  margin: 5px 0;
+}
+
+.download-app img {
+  width: 150px;
+  margin-top: 10px;
+}
+
+@keyframes moveAndFade {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
   }
-  
-  .contact-info p {
-    font-size: 1.5rem;
-    margin: 5px 0;
-    line-height: 1.5;
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
-  
-  .download-app p {
-    font-size: 1.5rem;
-    margin: 5px 0;
+}
+
+.firstcontent img {
+  animation: moveAndFade 1s ease-in-out;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+}
+
+@keyframes popUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
   }
-  
-  .download-app img {
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.firstcontent h1 {
+  animation: popUp 2s ease-out;
+  position: relative;
+}
+
+/* Responsive Design */
+@media (max-width: 1024px) {
+  header {
+    justify-content: space-between;
+  }
+
+  header nav a {
+    margin: 0 0.5rem;
+    font-size: 0.9rem;
+  }
+
+  .firstcontent {
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+  }
+
+  .features,
+  .download-section,
+  .about .content {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .download-section img {
+    width: 70%;
+  }
+
+  .about img {
     width: 150px;
-    margin-top: 10px;
+    height: 150px;
   }
-  
-  @keyframes moveAndFade {
-    0% {
-      transform: translateX(-100%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-  
-  
-  .firstcontent img {
-    animation: moveAndFade 1s ease-in-out;
-    position: relative; 
-    display: block; 
-    margin: 0 auto; 
-  }
-  
-  
-  @keyframes popUp {
-    0% {
-      transform: translateY(100%); 
-      opacity: 0; 
-    }
-    100% {
-      transform: translateY(0); 
-      opacity: 1; 
-    }
-  }
-  
-  
-  .firstcontent h1 {
-    animation: popUp 2s ease-out; 
-    position: relative; 
-  }
-
-  @media (max-width: 768px) {
-    .features,
-    .download-section,
-    .about .content {
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    .container {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
 }
-  
+@media (max-width: 768px) {
+  .firstcontent h1 {
+      margin-right: 0;
+      text-align: center;
+  }
+}
